--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,4 +4,9 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+chrono = "0.4.38"
 clap = { version = "4.5.9", features = ["cargo"] }
+
+[[bin]]
+name = "todo"
+path = "src/main.rs"
